--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,12 @@
     "rewrites": [
       {
         "source": "/(.*)",
-        "destination": "/"
+        "destination": "/index.html"
       }
-    ]
+    ],
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
+    "framework": "vite",
+    "cleanUrls": true
   }
   
